added new handler for world info, updated server status handler
